youtube instead of last.fm

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -48,15 +48,15 @@
         %a{href: "http://se.linkedin.com/in/sebwal", target: "_new"} http://se.linkedin.com/in/sebwal
         %p The serious me.
       %li
-        = image_tag 'icon/lastfm.png', alt: 'Last.fm'
-        %h3 Last.fm
-        %a{href: "http://www.last.fm/user/jimtegel", target: "_new"} http://www.last.fm/user/jimtegel
-        %p All the music I listen to.
-      %li.last
         = image_tag 'icon/github.png', alt: 'Github'
         %h3 Github
         %a{href: "https://github.com/wallin", target: "_new"} https://github.com/wallin
         %p My stash for all sorts of code
+      %li.last
+        = image_tag 'icon/youtube.gif', alt: 'Youtube'
+        %h3 Youtube
+        %a{href: "http://www.youtube.com/jimtegel", target: "_new"} http://www.youtube.com/jimtegel
+        %p My videos. Mostly LED stuff and couple of NES playlists
   #footer
     %h3 Contact me
     %address
